# harrix-swiss-knife

./: .add_avifdec.exe.md  .add_avifenc.exe.md  .add_ffmpeg.exe.md  .gitattributes  .gitignore  .prettierignore  DEVELOPMENT.md  LICENSE.md  README.md  TEMPLATE_SYSTEM_SUMMARY.md  THIRD_PARTY_NOTICES.md  attribution.yaml  avifdec.txt  avifenc.txt  config.json  ffmpeg.txt  harrix_swiss_knife.spec  install-all-offline.bat  install.bat  package-lock.json  package.json  pyproject.toml  test_radio_buttons.py
api-keys/: README.md  bothub-api-key.example.txt  pypi-token.example.txt
config/: beginning-of-article.md  beginning-of-md-docs.md  beginning_of_md.md  cli-commands.md  cli_commands.md  config.json  template-book.md  template-coffee.md  template-event.md  template-movie.md  template-series.md  template-travel.md
config/prompts/: finance-purchases-to-tsv.md  food-kcal-lookup.md  food-log-to-tsv.md  food-log-translate-names.md  food-portion-weight-from-calories.md  image-ocr-to-markdown.md  text-fix-ru-clipboard.md  text-fix-ru.md  text-rewrite-ru.md
devtools/: __init__.py  split_actions_module.py
docs/: action_base.g.md  action_base.md  action_output_bus.g.md  action_output_registry.g.md  action_title.g.md  actions_apps.g.md  actions_apps.md  actions_dev.g.md  actions_dev.md  actions_file.g.md  actions_file.md  actions_images.g.md  actions_images.md  actions_md.g.md  actions_md.md  actions_py.g.md  actions_py.md  app_startup.g.md  cli.g.md  cli_menu.g.md  database_manager.md  desktop_shortcut.g.md  development.g.md  filtered_combobox.g.md  fitness.md  fitness_database_manager.md  fitness_funcs.md  fitness_window.md  funcs.g.md  funcs.md  funcs_md.g.md  funcs_py.g.md  global_hotkey.g.md  index.g.md  index.md  keyboard_layout_search.g.md  license.g.md  main.g.md  main.md  main_menu_base.g.md  (+37 more)
docs/actions/: action_log_browser.g.md  apps.g.md  base.g.md  development.g.md  dialog_service.g.md  dialog_widgets.g.md  files.g.md  images.g.md  markdown.g.md  markdown_utils.g.md  python.g.md  text_diff_dialog.g.md  text_result_dialog.g.md
docs/actions/apps/: _launcher.g.md  finance.g.md  fitness.g.md  food.g.md  habits.g.md
docs/actions/common/: app_launcher.g.md  github_https.g.md  image_optimize.g.md  markdown_commit.g.md  md_image_optimize.g.md  uv_name.g.md  (+3 more)
docs/apps/: common.g.md
docs/finance/: account_edit_dialog.g.md  amount_delegate.g.md  database_manager.g.md  exchange_rate_checker_worker.g.md  exchange_rate_worker.g.md  exchange_rates_operations.g.md  main.g.md  mixins.g.md  text_input_dialog.g.md  text_parser.g.md  window.g.md
docs/fitness/: database_manager.g.md  main.g.md  mixins.g.md  window.g.md
docs/food/: database_manager.g.md  food_item_dialog.g.md  main.g.md  mixins.g.md  text_input_dialog.g.md  text_parser.g.md  window.g.md
docs/integrations/: bothub_client.g.md  http_download.g.md  http_transport.g.md
docs/screenshot/: capture.g.md  preview_dialog.g.md  region_overlay.g.md  shutter_button.g.md  window_visibility.g.md
docs/services/: text_fix_bothub.g.md
install/: 01_clean-junk.bat  01_download-bundle-force-binaries.bat  02_download-bundle-force-binaries.bat  02_download-bundle-force-installers.bat  03_download-bundle-force-installers.bat  03_download-repos.bat  04_download-repos.bat  05_build-install-zips.bat  05_download-npm-packages.bat  05_download-uv-cache.bat  07_clean-logs.bat  Download-Bundle.ps1  build-install-zips.bat  build-install-zips.ps1  clean-junk.ps1  clean-logs.ps1  download-bundle .ps1  download-bundle-elevated.ps1  download-bundle-force-installers.bat  download-bundle-force.bat  download-bundle-runas.ps1  download-bundle.ps1  download-npm-packages.ps1  download-repos.ps1  download-uv-cache.bat  download-uv-cache.ps1  harrix-swiss-knife.ps1  install-all-offline-with-log.ps1  install-all-offline.bat  install-with-log.ps1  install.bat
scripts/: deploy-harrix-swiss-knife.ps1  harrix-swiss-knife.ps1  install.bat
src/harrix_swiss_knife/: __init__.py  action_base.py  action_base_in_thread.py  action_output_bus.py  action_output_registry.py  action_title.py  actions_apps.py  actions_dev.py  actions_file.py  actions_images.py  actions_md.py  actions_notes.py  actions_os.py  actions_py.py  actions_python.py  actions_windows.py  app_startup.py  cli.py  cli_menu.py  desktop_shortcut.py  filtered_combobox.py  fitness.py  fitness_database_manager.py  fitness_funcs.py  fitness_window.py  fitness_window.ui  funcs.py  funcs_dev.py  funcs_file.py  funcs_md.py  funcs_py.py  funcs_pyside.py  funcs_temp.py  functions.py  global_hotkey.py  keyboard_layout_search.py  main.py  main_menu_base.py  main_window.py  main_window_settings.py  (+33 more)
tests/: __init__.py  test_action_title.py  test_app_launcher.py  test_audio_capture.py  test_audio_compress.py  test_balance_check_performance_helpers.py  test_beautify_md_folder.py  test_bothub_audio.py  test_bothub_image_ocr.py  test_bothub_network.py  test_chart_colors.py  test_chart_compute_performance.py  test_common_safe_identifier.py  test_discard_git_changes_folder.py  test_extract_date_from_filename.py  test_field_link_subfolders.py  test_finance_description_filter.py  test_finance_number_utils.py  test_finance_transaction_helpers.py  test_fitness_progress_calculator.py  test_food_food_display.py  test_food_kcal_lookup_parser.py  test_http_transport.py  test_image_filename_base.py  test_image_optimize_settings.py  test_keyboard_layout_search.py  test_load_image_pixmap.py  test_main_window_settings.py  test_map_coordinates.py  test_markdown_commit.py  test_new_markdown_paths.py  test_ocr_markdown.py  test_paths_action_output.py  test_paths_temp.py  test_quick_launcher_dialog_layout.py  test_quick_launcher_hotkey.py  test_quick_launcher_markdown_panel.py  test_quick_launcher_registry.py  test_quick_launcher_settings.py  test_raster_optimize.py  (+4 more)
vscode/harrix-notes-explorer/: HARRIX_CLI.md  README.md  extension.js  harrix-cli.js  package.harrix-cli.contributes.json  package.json
vscode/harrix-notes-explorer-hsk/: HARRIX_CLI.md  extension.js  harrix-cli.js  package.harrix-cli.contributes.json  package.json
(+528 files in other folders)
