[project]
name = "harrix-swiss-knife"
version = "0.2"
description = "Python + Node.js application for automating personal tasks in Windows"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Anton Sergienko", email = "anton.b.sergienko@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "harrix-pylib>=0.117",
    "libcst>=1.5.1",
    "pillow>=11.1.0",
    "pyside6>=6.8.1.1",
    "pythonnet>=3.0.5",
    "pyyaml>=6.0.2",
    "ruff>=0.9.2",
]

[project.scripts]
harrix-swiss-knife = "harrix_swiss_knife:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["isort>=5.13.2", "pytest>=8.3.4", "vermin>=1.6.0"]

# Disabling some pydocstyle rules that conflict with Markdown-style documentation
# We use Markdown for docstrings instead of traditional reST/Napoleon/Google formats
# D412 (pydocstyle (D)) — No blank lines allowed between a section header and its content ("{name}")
# D417 (pydocstyle (D)) — Missing argument description in the docstring for {definition}: {name}
# Other rules:
# PLR0915 — Too many statements ({statements} > {max_statements})
# PLR0912 — Too many branches ({branches} > {max_branches})
# C901 — {name} is too complex ({complexity} > {max_complexity})
# S603 — subprocess call: check for execution of untrusted input
[tool.ruff]
select = ["ALL"]
ignore = ["D412", "D417", "PLR0912", "PLR0915", "C901", "S603"]
line-length = 120

# Disable specific checks in test files:
# S101 — Use of assert detected
# D103 (pydocstyle (D)) — Missing docstring in public function
# INP001 — File {filename} is part of an implicit namespace package. Add an __init__.py.
[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D103", "INP001"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"

markers = ["slow: mark a test as slow."]
